# YaP_All_Tasks

./: .gitignore
Lesson7_1_CommonTasks/: main.cpp
Lesson8_2_Practical_Recomendations/: libstat.cpp  libstat.h  libstat_test.cpp
Sprint10_1_Lesson10_Variant/: main.cpp  svg.cpp  svg.h
Sprint10_1_Lesson10_Variant_JSON/: json.cpp  json.h  main.cpp
Sprint10_1_Lesson11_Dynamic_cast/: animals.cpp
Sprint10_1_Lesson14_New/: domain.h  json.cpp  json_reader.cpp  json_reader.h  main.cpp  request_handler.cpp  request_handler.h  transport_catalogue.cpp  transport_catalogue.h
Sprint10_1_Lesson14_TransportCatalogue_JSON_SVG/: geo.h  json.cpp  json.h  json_reader.cpp  json_reader.h  main.cpp  request_handler.cpp  request_handler.h  transport_catalogue.cpp  transport_catalogue.h
Sprint10_1_Lesson14_TransportCatalogue_JSON_SVG copy/: domain.cpp  domain.h  json.cpp  json.h  json_reader.cpp  json_reader.h  main.cpp  request_handler.cpp  request_handler.h  svg.h  transport_catalogue.cpp  transport_catalogue.h
Sprint10_1_Lesson15_Visualize/: domain.cpp  json.cpp  json.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  request_handler.cpp  request_handler.h  transport_catalogue.cpp
Sprint10_1_Lesson15_Visualize rev1/: domain.h  json.cpp  json.h  json_reader.cpp  json_reader.h  map_renderer.cpp  map_renderer.h  request_handler.cpp  request_handler.h  svg.cpp  transport_catalogue.h
Sprint10_1_Lesson2_Class_Relations/: main.cpp
Sprint10_1_Lesson3_Inheritance/: main.cpp  people.cpp  people.h
Sprint14_2_Lesson7_StaticLib/Cypher/: CMakeLists.txt  main.cpp
(+307 files in other folders)
